--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-../.idea/vcs.xml
+.idea/*
 
 # react builds in flask folder
-flask_backend/templates/*
-flask_backend/static/*
+flask_backend/templates/
+flask_backend/static/
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
